[package]
name = "penspecter-server"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.3", features = ["macros"] }
chrono = "0.4.40"
color-print = "0.3.7"
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.44.2", features = ["full"] }
tower = "0.5.2"
